--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>chapter2/eureka-server</module>
         <module>chapter2/eureka-provider</module>
         <module>chapter2/ribbon-consumer</module>
+        <module>chapter3/gateway</module>
     </modules>
 
     <parent>
