--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>chapter1/hot-plug</module>
         <module>chapter1/servlet-framework-client</module>
         <module>chapter1/servlet-framework-example</module>
+        <module>chapter1/webflux</module>
         <module>chapter2/eureka-server</module>
         <module>chapter2/eureka-provider</module>
         <module>chapter2/ribbon-consumer</module>
